# PedaRogue

./: .gitignore  CMakeLists.txt  README.md  log_map.txt
data/: monsters.json  objects.json
docs/: Doxyfile
include/: CommandProcessor.hpp  ComponentManager.hpp  ComponentPool.hpp  Components.hpp  ECSTypes.hpp  Engine.hpp  EntityManager.cpp  EntityManager.hpp  FOVTools.hpp  Game.hpp  InputHandler.hpp  Inventory.hpp  ItemCommands.hpp  Level.hpp  LevelGeneration.hpp  PlayerMovement.hpp  ProcessEvents.hpp  RenderSystem.hpp  Types.hpp  UI.hpp  UI_List.hpp
include/core/: ComponentManager.hpp  ComponentPool.hpp  ECSManager.hpp  ECSTypes.hpp  EntityManager.hpp  SystemManager.hpp
include/systems/: AttackSystem.hpp  BackSystem.hpp  CollisionSystem.hpp  DropSystem.hpp  FoVCompute.hpp  LightSystem.hpp  PickSystem.hpp  PlayerMovement.hpp  RenderSystem.hpp
src/: CommandProcessor.cpp  Engine.cpp  EntityManager.cpp  FOVTools.cpp  Game.cpp  InputHandler.cpp  Inventory.cpp  ItemCommands.cpp  Level.cpp  LevelGeneration.cpp  ProcessEvents.cpp  UI.cpp  UI_List.cpp  main.cpp
src/systems/: AttackSystem.cpp  BackSystem.cpp  CollisionSystem.cpp  DropSystem.cpp  FoVCompute.cpp  LightSystem.cpp  PickSystem.cpp  PlayerMovement.cpp  RenderSystem.cpp
src/win/: Window.cpp
src/win/include/: Window.h  Window.hpp
tests/: CMakeLists.txt  Test.cpp  Test_ComponentManager.cpp  Test_ComponentPool.cpp  Test_ECSManager.cpp  Test_EntityManager.cpp  json_test.cpp
tools/: Astar.cpp  Astar.hpp  MonsterParse.cpp  ObjectParse.cpp
tools/include/: MonsterParse.hpp  ObjectParse.hpp
